--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,16 @@ jobs:
     outputs:
       runner: ${{ steps.set-runner.outputs.use-runner }}
     steps:
+      - name: Build Dev Container
+        uses: eq19/eq19.github.io@v1
+        if: ${{ contains(github.repository, 'github.io') }}
+        with:
+          docker_hub_username: "eq19"
+          docker_hub_token: ${{ secrets.DOCKER_HUB_TOKEN }}
+          dockerfile_path: ./.devcontainer/Dockerfile
+          image_name: "prime"
+          image_tag: "latest"
+
       - name: Determine which runner to use
         id: set-runner
         uses: eq19/maps@v2
