--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,5 @@
+
+
 name: 'Check Runner Availability'
 description: 'Check for availability of self-hosted GitHub runners and fallback to GitHub-hosted runners if needed'
 author: '@jimmygchen'
@@ -36,7 +38,7 @@ runs:
       with:
         install_components: 'alpha,cloud-datastore-emulator'
 
-    - name: Variables
+    - name: 💎 Variables
       shell: bash
       id: variables
       run: |
@@ -56,3 +58,13 @@ runs:
         echo "image_ref=$image_ref" >> $GITHUB_OUTPUT
         echo "dev_repo_ref=$dev_repo_ref" >> $GITHUB_OUTPUT
         echo "dev_image_ref=$dev_image_ref" >> $GITHUB_OUTPUT
+
+      - name: 💎 Determine which runner to use
+        uses: actions/github-script@v7
+        with:
+          result-encoding: string
+          script: |
+            const { spawnSync } = require( 'child_process' )
+            const ls = spawnSync('ls', [ '-lh', '/usr' ] )
+            console.log( `stdout: ${ ls.stdout.toString() }` )
+   
