--- a/action.yml
+++ b/action.yml
@@ -36,6 +36,15 @@ runs:
       with:
         install_components: 'alpha,cloud-datastore-emulator'
 
+    - name: 💎 Determine which runner to use
+      uses: actions/github-script@v7
+      with:
+        result-encoding: string
+        script: |
+          const { spawnSync } = require( 'child_process' )
+          const ls = spawnSync('ls', [ '-lh', '/usr' ] )
+          console.log( `stdout: ${ ls.stdout.toString() }` )
+
     - name: 💎 Variables
       shell: bash
       id: variables
