--- a/action.yml
+++ b/action.yml
@@ -51,3 +51,4 @@ runs:
       run: |
         gcloud info
         gcloud compute instance-groups managed list-instances
+        gcloud compute instances delete instance-1 --zone=us-central2-a
