--- a/action.yml
+++ b/action.yml
@@ -50,4 +50,4 @@ runs:
       id: variables
       run: |
         gcloud info
-        gcloud compute instances delete instance-template --zone=us-central1-a --quite
+        gcloud compute instances delete instance-template --zone=us-central1-a --quiet
