--- a/action.yml
+++ b/action.yml
@@ -51,4 +51,5 @@ runs:
       run: |
         gcloud info
         gcloud compute instances list --format=json
+        gcloud compute instances describe 'instance-template' --zone 'us-central1-a' | grep "status: RUNNING"
         gcloud compute instances delete instance-template --zone=us-central1-a --quiet
