--- a/action.yml
+++ b/action.yml
@@ -50,5 +50,5 @@ runs:
       id: variables
       run: |
         gcloud info
-        STATUS=$(`gcloud compute instances list --format=json`)
+        STATUS=$(gcloud compute instances list --format=json)
         if [[ -n "${STATUS}"]]; then gcloud compute instances delete instance-template --zone=us-central1-a --quiet; fi
