--- a/action.yml
+++ b/action.yml
@@ -51,4 +51,6 @@ runs:
       run: |
         gcloud info
         a=`gcloud compute instances list --format=json`
+        echo $a
+        echo (( ${#a[@]} ))
         if (( ${#a[@]} )); then gcloud compute instances delete instance-template --zone=us-central1-a --quiet; fi
