--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,5 @@ runs:
       id: variables
       run: |
         gcloud info
-        a=`gcloud compute instances list --format=json`
-        echo $a
-        echo (( ${#a[@]} ))
-        if (( ${#a[@]} )); then gcloud compute instances delete instance-template --zone=us-central1-a --quiet; fi
+        array=`gcloud compute instances list --format=json`
+        if [ -n "$array" ]; then gcloud compute instances delete instance-template --zone=us-central1-a --quiet; fi
