--- a/action.yml
+++ b/action.yml
@@ -50,5 +50,13 @@ runs:
       id: variables
       run: |
         gcloud info
+        echo "\n"
+        gcloud compute instances list
+        echo "\n"
+        gcloud compute instances list --format=json
+        echo "\n"
         array=`gcloud compute instances list --format=json`
+        echo "\n"
+        echo "$array"
+        echo "\n"
         if [ -z "$array" ]; then gcloud compute instances delete instance-template --zone=us-central1-a --quiet; fi
