--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build and deploy eQuantum site
 
 # Runs on workflow_run.conclusion
 on:
-  push:
+  #push:
   workflow_run:
     types: [completed]
     workflows: ["pages-build-deployment"]
@@ -75,7 +75,7 @@ jobs:
       fail-fast: false
       matrix:
         #node_version: [8, 10, 12]
-        os: [windows-latest, ubuntu-latest] #self-hosted
+        os: [windows-latest, self-hosted]
 
     runs-on: ${{ matrix.os }}
     #runs-on: ${{ fromJson(needs.determine-runner.outputs.runner) }}
@@ -95,7 +95,8 @@ jobs:
         id: set-runner
         uses: eq19/parser@v1
         with:
-          pre_build_commands: 'gcloud info'
+          pre_build_container: 'eq19/setup'
+          repository: ${{ github.repository }}
           token: ${{ secrets.ACCESS_TOKEN }}
           credentials: ${{ secrets.GCP_CREDENTIALS }}
   
