Assign eQuantum to project workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
         id: set-runner
         uses: eq19/parser@v1
         with:
-          pre_build_container: 'eq19/setup'
+          pre_build_container: 'eq19/prime'
           repository: ${{ github.repository }}
           token: ${{ secrets.ACCESS_TOKEN }}
           credentials: ${{ secrets.GCP_CREDENTIALS }}
@@ -105,7 +105,6 @@ jobs:
         uses: Vampire/setup-wsl@v3
 
       - name: 🪂 Grammar Languange
-        #if: ${{ runner.os != 'Windows' && runner.os != 'Linux' }}
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '3.1.x'
